<resources>
    <string name="app_name">QM App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="label_template">Test string</string>

    <string name="order_title"><b><i>Заявка на дослідження мікрогеометрії</i></b></string>
    <string name="select_type"><i>Вид дослідження</i></string>
    <string name="select_reason"><i>Причина дослідження</i></string>
    <string name="select_customer"><i>Споживач</i></string>
    <string name="select_placer"><i>Замовник дослідження</i></string>
    <string name="select_department"><i>Виробничий підрозділ</i></string>
    <string name="select_sub_department"><i>Виробнича дільниця</i></string>
    <string name="select_ordered_by"><i>Замовлення розмістив</i></string>
    <string name="select_channel"><i>Виробничий канал</i></string>
    <string name="select_line"><i>Виробнича лінія</i></string>
    <string name="select_item_type"><i>Позначення деталі</i></string>
    <string name="select_operation"><i>Операція (етап обробки)</i></string>
    <string name="select_quantity"><i>Кількість деталей</i></string>
    <string name="select_characteristics"><i>Параметри</i></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="delete_btn"><i>Record will be deleted</i></string>
    <string name="edit_btn"><i>Record will be edited</i></string>
    <string name="title_activity_team">TeamActivity</string>

    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="title_activity_new_order">NewOrderActivity</string>

    <string name="placeholder_search">Search</string>

    <string name="bottom_navigation_home">HOME</string>
    <string name="bottom_navigation_profile">SAVE</string>

    <string name="authorize">Authorize</string>
    <string name="remind_later">Remind later</string>

    <string name="REMIND_LATER_ACTION">REMIND_LATER_ACTION</string>

</resources>