<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.neworder.Fragment_____NewOrder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_order_title"
            style="@style/order_title_text_font"
            android:text="@string/order_title"
            />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="4dp">

            <LinearLayout
                android:id="@+id/step_1"
                style="@style/step_layout_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/step_text_font"
                    android:text="1" />

                <LinearLayout style="@style/spinner_layout_style">

                    <TextView
                        style="@style/spinner_title_text_font"
                        android:text="@string/select_reason" />

                    <TextView
                        android:id="@+id/text_reason_spinner"
                        style="@style/spinner_text_font"
                        android:hint="@string/select_reason" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/step_2"
                style="@style/step_layout_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/step_1">

                <TextView
                    style="@style/step_text_font"
                    android:text="2" />

                <LinearLayout style="@style/spinner_layout_style">

                    <TextView
                        style="@style/spinner_title_text_font"
                        android:text="@string/select_department" />

                    <TextView
                        android:id="@+id/text_department_spinner"
                        style="@style/spinner_text_font"
                        android:hint="@string/select_department" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/step_3"
                style="@style/step_layout_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/step_2">

                <TextView
                    style="@style/step_text_font"
                    android:text="3" />

                <LinearLayout style="@style/spinner_layout_style">

                    <TextView
                        style="@style/spinner_title_text_font"
                        android:text="@string/select_sub_department" />

                    <TextView
                        android:id="@+id/text_sub_dep_spinner"
                        style="@style/spinner_text_font"
                        android:hint="@string/select_sub_department" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/step_4"
                style="@style/step_layout_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/step_3">

                <TextView
                    style="@style/step_text_font"
                    android:text="4" />

                <LinearLayout style="@style/spinner_layout_style">

                    <TextView
                        style="@style/spinner_title_text_font"
                        android:text="@string/select_ordered_by" />

                    <TextView
                        android:id="@+id/text_ordered_by_spinner"
                        style="@style/spinner_text_font"
                        android:hint="@string/select_ordered_by" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/step_5"
                style="@style/step_layout_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/step_4">

                <TextView
                    style="@style/step_text_font"
                    android:text="5" />

                <LinearLayout style="@style/spinner_layout_style">

                    <TextView
                        style="@style/spinner_title_text_font"
                        android:text="@string/select_channel" />

                    <TextView
                        android:id="@+id/text_channel_spinner"
                        style="@style/spinner_text_font"
                        android:hint="@string/select_channel" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/step_6"
                style="@style/step_layout_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/step_5">

                <TextView
                    style="@style/step_text_font"
                    android:text="6" />

                <LinearLayout style="@style/spinner_layout_style">

                    <TextView
                        style="@style/spinner_title_text_font"
                        android:text="@string/select_line" />

                    <TextView
                        android:id="@+id/text_line_spinner"
                        style="@style/spinner_text_font"
                        android:hint="@string/select_line" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/step_7"
                style="@style/step_layout_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/step_6">

                <TextView
                    style="@style/step_text_font"
                    android:text="7" />

                <LinearLayout style="@style/spinner_layout_style">

                    <TextView
                        style="@style/spinner_title_text_font"
                        android:text="@string/select_item_type" />

                    <TextView
                        android:id="@+id/text_item_type_spinner"
                        style="@style/spinner_text_font"
                        android:hint="@string/select_item_type" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/step_8"
                style="@style/step_layout_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/step_7">

                <TextView
                    style="@style/step_text_font"
                    android:text="8" />

                <LinearLayout style="@style/spinner_layout_style">

                    <TextView
                        style="@style/spinner_title_text_font"
                        android:text="@string/select_operation" />

                    <TextView
                        android:id="@+id/text_operation_spinner"
                        style="@style/spinner_text_font"
                        android:hint="@string/select_operation" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/step_9"
                style="@style/step_layout_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/step_8">

                <TextView
                    style="@style/step_text_font"
                    android:text="9" />

                <LinearLayout style="@style/spinner_layout_style">

                    <TextView
                        style="@style/spinner_title_text_font"
                        android:text="@string/select_quantity" />

                    <TextView
                        android:id="@+id/text_quantity_spinner"
                        style="@style/spinner_text_font"
                        android:hint="@string/select_quantity" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/step_10"
                style="@style/step_layout_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/step_9">

                <TextView
                    style="@style/step_text_font"
                    android:text="10" />

                <LinearLayout style="@style/spinner_layout_style">

                    <TextView
                        style="@style/spinner_title_text_font"
                        android:text="@string/select_characteristics" />

                    <TextView
                        android:id="@+id/text_to_design"
                        style="@style/spinner_text_font"
                        android:hint="@string/select_characteristics" />
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </LinearLayout>
</layout>