<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments._____OrderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/thread_simple_btn_color"
        android:padding="4dp">

        <LinearLayout
            android:id="@+id/step_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/background_order_step"
                android:gravity="center"
                android:text="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/text_department_spinner"
                style="@style/buttons_text_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_manufacturing"
                android:ellipsize="end"
                android:hint="@string/select_department"
                android:maxLines="1"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:drawableEndCompat="@drawable/ic_arrow_down" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/step_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step_2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/background_order_step"
                android:gravity="center"
                android:text="3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/text_sub_dep_spinner"
                style="@style/buttons_text_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_manufacturing"
                android:ellipsize="end"
                android:hint="@string/select_sub_department"
                android:maxLines="1"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:drawableEndCompat="@drawable/ic_arrow_down" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/step_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step_3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/background_order_step"
                android:gravity="center"
                android:text="5"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/text_channel_spinner"
                style="@style/buttons_text_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_manufacturing"
                android:ellipsize="end"
                android:hint="@string/select_channel"
                android:maxLines="1"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:drawableEndCompat="@drawable/ic_arrow_down" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/step_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/background_order_step"
                android:gravity="center"
                android:text="7"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/text_item_type_spinner"
                style="@style/buttons_text_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_manufacturing"
                android:ellipsize="end"
                android:hint="@string/select_item_type"
                android:maxLines="1"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:drawableEndCompat="@drawable/ic_arrow_down" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>